--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,24 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.case {
+  height: 34.9375em;
+  padding: 1em 1em 4em;
+  width: 23.4375em;
+
+  border-radius: 1.5em;
+  background-color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.case__inner {
+  background-color: white;
+  border-radius: 1.5em;
+  height: 100%;
+  width: 100%;
 }
