--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -20,7 +20,9 @@
 
   box-sizing: border-box;
   height: 100%;
-  padding: 2em 2em 0;
+  min-height: 350px;
+  margin: 2em 0;
+  padding: 0 2em 2em;
   width: 100%;
 }
 
