--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ ul {
   body {
     height: 100vh;
     max-width: 100vw;
-    overflow: none;
+    overflow: hidden;
   }
   .case {
     height: 100vh;
